--- a/crawler/package.json
+++ b/crawler/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "crawler.js",
   "dependencies": {
+    "@elastic/elasticsearch": "^7.4.0",
     "crawler": "^1.2.1",
+    "csv": "^5.1.3",
+    "csv-parse": "^4.6.3",
     "csv-write-stream": "^2.0.0",
     "fs-extra": "^8.1.0",
     "minimist": "^1.2.0",
