--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: "3"
 services:
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:7.4.0
@@ -24,6 +24,5 @@ services:
       - elasticsearch
     ports:
       - 5601:5601
-
 # https://www.elastic.co/guide/en/elasticsearch/reference/7.4/docker.html
 # https://www.elastic.co/guide/en/kibana/7.4/docker.html
