--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "fiit-vinf-1",
   "version": "1.0.0",
   "devDependencies": {
+    "husky": "^3.0.9",
     "prettier": "^1.18.2"
   },
   "repository": {
