update repository installation setup

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,4 +1,4 @@
 - repo: https://github.com/prettier/prettier
-  rev: "" # Use the sha or tag you want to point at
+  rev: 2.0.5
   hooks:
     - id: prettier
