--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,17 @@
 version: "3"
 services:
+  app:
+    image: node:11.12.0
+    container_name: app
+    command: >
+      bash -c "npm i && npm rebuild node-sass && npm start"
+    ports:
+      - 8000:4200
+    volumes:
+      - ./app:/app
+    working_dir: /app
+    depends_on:
+      - elasticsearch
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:7.4.0
     container_name: elasticsearch
@@ -11,7 +23,7 @@ services:
       - bootstrap.memory_lock=true
       - http.port=9200
       - http.cors.enabled=true
-      - http.cors.allow-origin=http://localhost:4200
+      - http.cors.allow-origin=*
       - http.cors.allow-headers=X-Requested-With,X-Auth-Token,Content-Type,Content-Length,Authorization
       - http.cors.allow-credentials=true
       - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
@@ -23,11 +35,10 @@ services:
       - 9200:9200
   kibana:
     image: docker.elastic.co/kibana/kibana:7.4.0
+    container_name: kibana
     environment:
       ELASTICSEARCH_URL: http://elasticsearch:9200
     depends_on:
       - elasticsearch
     ports:
       - 5601:5601
-# https://www.elastic.co/guide/en/elasticsearch/reference/7.4/docker.html
-# https://www.elastic.co/guide/en/kibana/7.4/docker.html
